Fix: removed margin-top from content-in-one-page, this removes the top gap from sivu 1 2 and 3

--- a/resources/src/webpack/sass/1_plugins/_content-in-one-page.scss
+++ b/resources/src/webpack/sass/1_plugins/_content-in-one-page.scss
@@ -8,7 +8,6 @@
 
   .row
   {
-    margin-top: 4rem;
     margin-bottom: 4rem;
   }
 
